# sortium_ai_client

./: .env.example  .gitignore  Cargo.toml  README.md
examples/: text2img.rs
examples/clap/: chat.rs  completion.rs  edits.rs  embeddings.rs  img2img.rs  text2img.rs
examples/yew-app/: .env.example  Cargo.toml  docker-compose.yml  nginx.conf
examples/yew-app/src/: main.rs
src/: lib.rs  stable_diffusion.rs  utils.rs
src/openai/: chats.rs  completions.rs  edits.rs  embeddings.rs  gpt3.rs  mod.rs
tests/: completions_test.rs  stable_diffusion_test.rs
