[package]
name = "sd_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
image = "0.24.5"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }

[[example]]
name = "clap-text"
path = "examples/clap/text2img.rs"

[package.metadata.example.clap-text]
name = "Stable Diffusion text2img Clap Client"
description = "A client for the Stable Diffusion API using the Clap library"
category = "command-line-utilities"
keywords = ["stable", "diffusion", "api", "client", "clap"]

[[example]]
name = "clap-img"
path = "examples/clap/img2img.rs"

[package.metadata.example.clap-img]
name = "Stable Diffusion img2img Clap Client"
description = "A client for the Stable Diffusion API using the Clap library"
category = "command-line-utilities"
keywords = ["stable", "diffusion", "api", "client", "clap"]

[dev-dependencies]
clap = { version = "4.0.29", features = ["derive"] }
dotenv = "0.15.0"
