[package]
name = "sortium_ai_client"
version = "0.1.0"
edition = "2021"
description = "Rust client for AI services"
license = "MIT"
authors = ["Sortium CC <https://sortium.com>"]
repository = "https://github.com/Sortium-io/sortium_ai_client"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
image = "0.24.5"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
tokio = { version = "1.23.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"

[[example]]
name = "clap-text"
path = "examples/clap/text2img.rs"

[package.metadata.example.clap-text]
name = "Stable Diffusion text2img Clap Client"
description = "A client for the Stable Diffusion API using the Clap library"
category = "command-line-utilities"
keywords = ["stable", "diffusion", "api", "client", "clap"]

[[example]]
name = "clap-img"
path = "examples/clap/img2img.rs"

[package.metadata.example.clap-img]
name = "Stable Diffusion img2img Clap Client"
description = "A client for the Stable Diffusion API using the Clap library"
category = "command-line-utilities"
keywords = ["stable", "diffusion", "api", "client", "clap"]

[[example]]
name = "clap-completions"
path = "examples/clap/completion.rs"

[package.metadata.example.clap-completions]
name = "OpenAI Completions Clap Client"
description = "A client for the OpenAI API using the Clap library"
category = "command-line-utilities"
keywords = ["openai", "api", "client", "clap"]

[[example]]
name = "clap-embeddings"
path = "examples/clap/embeddings.rs"

[package.metadata.example.clap-embeddings]
name = "OpenAI Embeddings Clap Client"
description = "A client for the OpenAI API using the Clap library"
category = "command-line-utilities"
keywords = ["openai", "api", "client", "clap"]

[[example]]
name = "clap-edits"
path = "examples/clap/edits.rs"

[package.metadata.example.clap-edits]
name = "OpenAI Edits Clap Client"
description = "A client for the OpenAI API using the Clap library"
category = "command-line-utilities"
keywords = ["openai", "api", "client", "clap"]


[dev-dependencies]
clap = { version = "4.0.29", features = ["derive"] }
dotenvy = "0.15.6"
mockito = "0.23.2"
